First hosted site code

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Biomechatronics Design Team</a></h1>
+          <h1><a href="index.html"> UW Biomechatronics Design Team</a> <div class="image logo"><img src="images/biotronicon.png" alt=""></div></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -71,20 +71,41 @@
 									<header>
 										<h3>e-NABLE</h3>
 									</header>
-									<p>
-										Through our collaboration with <a href="https://enablingthefuture.org/">e-Nable</a>, an online global community, our students 3D print and assemble custom forearm prosthetics, meticulously tailored to meet the exact size specifications of each patient. These prosthetics utilize mechanical actuation for joint movement and object gripping, providing an affordable and accessible solution for patients with limited financial resources, ensuring that everyone has access to life-enhancing technology.
-									</p>
+									<div class="row">
+                    <div class="col-7">
+                      <p>
+                        Through our collaboration with <a href="https://enablingthefuture.org/">e-Nable</a>, an online global community, our students 3D print and assemble custom forearm prosthetics, meticulously tailored to meet the exact size specifications of each patient. These prosthetics utilize mechanical actuation for joint movement and object gripping, providing an affordable and accessible solution for patients with limited financial resources, ensuring that everyone has access to life-enhancing technology.
+                      </p>
+                    </div>
+                    <div class="col-4">
+                      <div class="video-container">
+                        <video src="images/enable.mov" muted controls>
+                          Your browser does not support the video tag.
+                        </video>
+                      </div>
+                    </div>
+                  </div>
+                  
                   <div class="image">
                     <img src="images/projects.jpg" alt="" width="780" height="200">
                   </div>
+
 								</section>
                 <section>
 									<header>
 										<h3>Spine Biostickers</h3>
 									</header>
-									<p>
-										We are pioneering software development for Spine Biostickers, a tool designed to monitor spinal posture in post-surgical patients, helping to prevent harmful movements during recovery. By utilizing gyroscopes attached to the patient, our system collects data and provides real-time alerts, ensuring patients maintain safe postures and facilitating a smoother, safer recovery process.
-									</p>
+                  <div class="row">
+                    <div class="col-7">
+                      <p>
+                        We are pioneering software development for Spine Biostickers, a tool designed to monitor spinal posture in post-surgical patients, helping to prevent harmful movements during recovery. By utilizing gyroscopes attached to the patient, our system collects data and provides real-time alerts, ensuring patients maintain safe postures and facilitating a smoother, safer recovery process.
+                      </p>
+                    </div>
+                    <div class="col-4">
+                      <div class="image">
+                        <img src="images/spinebio.png" alt="" width="200" height="300">
+                      </div>
+									
 								</section>
                 <section>
 									<header>
