--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Biomechatronics Design Team</a></h1>
+          <h1><a href="index.html"> UW Biomechatronics Design Team</a> <div class="image logo"><img src="images/biotronicon.png" alt=""></div></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -39,7 +39,7 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/about.jpg" alt="" /></a>
 								<header>
 									<h2>About Us</h2>
                   <p>our team</p>
@@ -68,7 +68,7 @@
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/pic02.jpg" alt="" />
+                        <img src="images/vishan.png" alt="" />
                       </div>
                       <p><b>Vishan</b> | Team & Hardware Lead</p>
                     </div>
@@ -100,7 +100,7 @@
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/pic02.jpg" alt="" />
+                        <img src="images/eve.png" alt="" />
                       </div>
                       <p><b>Eve</b></p>
                     </div>
