--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html"> UW Biomechatronics Design Team</a></h1>
+					<h1><a href="index.html"> UW Biomechatronics Design Team</a> <div class="image logo"><img src="images/biotronicon.png" alt=""></div></h1>
+          
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -125,7 +126,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="projects.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="projects.html" class="image featured"><img src="images/tetra.png" alt="" /></a>
 													<header>
 														<h3>Tetra</h3>
 													</header>
