--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
 				<section id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html">Biomechatronics Design Team</a></h1>
+          <h1><a href="index.html"> UW Biomechatronics Design Team</a> <div class="image logo"><img src="images/biotronicon.png" alt=""></div></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -38,12 +38,12 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<a href="#" class="image featured"><img src="images/about.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/BioTronLogoHQ.jpg" alt="" /></a>
 								<header>
 									<h2>How to Join</h2>
 								</header>
                 <ol>
-                  <li>Join our <a href="https://discord.com/invite/nKtbDPMq">Discord server</a></li>
+                  <li>Join our <a href="https://discord.gg/YBNN5ThRAA" target="blank">Discord server</a></li>
                   <li>Go to the <i>#roles</i> channel and select the sub-team you're interested in joining (ps. you can join more than one!)</li>
                   <li>Attend our team meetings to learn more about the what we do and start working on projects. The Fall '24 meeting schedule is <a href="#footer">below!</a></li>
                 </ol>
