--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 								<li><a href="index.html">Home</a></li>
                 <li class="current"><a href="about.html">About Us</a></li>
 								<li><a href="projects.html">Projects</a></li>
+								<li><a href="past projects.html">Past Projects</a></li>
 								<li><a href="join.html">Join Us</a></li>
 								
 							</ul>
@@ -48,51 +49,47 @@
 									The UW Biomechatronics Design Team (aka Biotron) is a design team at the University of Waterloo that designs and builds biomechanical devices to solve biomedical problems. We are a group of science and engineering students that create solutions to emerging and existing problems in the biomedical field.
 								</p>
 								<p>
-									Our team is comprised of 4 sub-teams: EMG Fabric, e-NABLE, Spine Bio Sticker, and Tetra. Each team is working on creating solutions to different biomedical issues that you can learn more about in <a href="projects.html">Projects</a>.
+									Our team is comprised of 2 current sub-teams: EMG Fabric and e-NABLE. Each team is working on creating solutions to different biomedical issues that you can learn more about in <a href="projects.html">Projects</a>.
 								</p>
 								<section>
 									<header>
 										<h3>Meet the Team!</h3>
 									</header>
 									<p>
-										Our team couldn't run without the help and guidance of our amazing team leads. Learn more about the fellow students you'll be working with on each project.
+										Our team couldn't run without the help and guidance of our amazing team leads and coop. Learn more about the fellow students you'll be working with on each project.
 									</p>
 									<h4>Team Lead</h4>
-                  </br>
+                </br>
+
                   <div class="image portrait">
-                    <img src="images/anna.png" alt="" />
+                    <img src="images/alyssa.jpg" alt="Portrait Photo of Alyssa Medina" />
                   </div>
-                  <p><b>Anna Polack</b></p>
+                  <p><b>Alyssa Medina</b></p>
 
                   <h4>EMG Fabric</h4>
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/vishan.png" alt="" />
+                        <img src="images/emma.jpg" alt="Portrait Photo of Emma Lane-Smith" />
                       </div>
-                      <p><b>Vishan</b> | Team & Hardware Lead</p>
+                      <p><b>Emma Lane-Smith</b> | Hardware Lead</p>
                     </div>
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/siwei.jpeg" alt="" />
+                        <img src="images/justin.jpg" alt="Portrait Photo of Justin" />
                       </div>
-                      <p><b>Siwei</b> | Software Lead</p>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                      <div class="image portrait">
-                        <img src="images/wallace.jpg" alt="" />
-                      </div>
-                      <p><b>Wallace</b> | Software Lead</p>
+                      <p><b>Justin Zhou</b> | Software Lead</p>
                     </div>
                   </div>
+
 
                   <h4>e-NABLE</h4>
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/pic02.jpg" alt="" />
+                        <img src="images/stephen.png" alt="Portrait Photo of Stephen Howe" />
                       </div>
-                      <p><b>TBD</b></p>
+                      <p><b>Stephen Howe</b></p>
                     </div>
                   </div>
 
@@ -100,25 +97,19 @@
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/eve.png" alt="" />
+                        <img src="images/eve.png" alt="Portrait Photo of Eve" />
                       </div>
                       <p><b>Eve</b></p>
                     </div>
                   </div>
 
-                  <h4>Tetra</h4>
+                  <h4>Coop</h4>
                   <div class="row">
                     <div class="col-4 col-6-medium col-12-small">
                       <div class="image portrait">
-                        <img src="images/caroline.jpg" alt="" />
+                        <img src="images/pic02.jpg" alt="Portrait Photo of Isabel Yang" />
                       </div>
-                      <p><b>Caroline Miskiel</b></p>
-                    </div>
-                    <div class="col-4 col-6-medium col-12-small">
-                      <div class="image portrait">
-                        <img src="images/leaslive.JPG" alt="" />
-                      </div>
-                      <p><b>Léa Slive</b></p>
+                      <p><b>Isabel Yang</b> | most important!</p>
                     </div>
                   </div>
 
