--- a/join.html
+++ b/join.html
@@ -26,6 +26,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="projects.html">Projects</a></li>
+								<li><a href="past projects.html">Past Projects</a></li>
 								<li class="current"><a href="join.html">Join Us</a></li>
 							</ul>
 						</nav>
@@ -45,7 +46,7 @@
                 <ol>
                   <li>Join our <a href="https://discord.gg/YBNN5ThRAA" target="blank">Discord server</a></li>
                   <li>Go to the <i>#roles</i> channel and select the sub-team you're interested in joining (ps. you can join more than one!)</li>
-                  <li>Attend our team meetings to learn more about the what we do and start working on projects. The Fall '24 meeting schedule is <a href="#footer">below!</a></li>
+                  <li>Attend our team meetings to learn more about the what we do and start working on projects. 
                 </ol>
 								<p>
 									If you have any questions feel free to message any of the <a href="about.html">Leads</a> on discord or contact us by <a href="mailto:biotron@uwaterloo.ca">email</a>.
