--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Us</a></li>
                 <li class="current"><a href="projects.html">Projects</a></li>
+								<li><a href="past projects.html">Past Projects</a></li>
 								<li><a href="join.html">Join Us</a></li>
 								
 							</ul>
@@ -55,7 +56,7 @@
                   <div class="row">
                     <div class="col-7">
                       <p>
-                        At EMG Fabric, we design and produce reusable, dry metal electrodes that work seamlessly with advanced machine learning libraries to interpret EMG signals. Our mission is to create a versatile suite of EMG electrodes and accompanying software, empowering applications like exoskeletons for patients with muscular dystrophies and supporting other pro-bono initiatives. We aim to revolutionize how EMG data is harnessed to improve patient outcomes.
+                        At EMG Fabric, we design and produce reusable, dry metal electrodes that work seamlessly with advanced machine learning libraries to interpret EMG signals. Our mission is to create a versatile suite of EMG electrodes and accompanying software to empower assisted-mobility applications, such as exoskeletons for patients with muscular dystrophies and supporting other pro-bono initiatives. We aim to revolutionize how EMG data is harnessed to improve patient outcomes.
                     </div>
                     <div class="col-4">
                       <div class="image">
@@ -74,7 +75,7 @@
 									<div class="row">
                     <div class="col-7">
                       <p>
-                        Through our collaboration with <a href="https://enablingthefuture.org/">e-Nable</a>, an online global community, our students 3D print and assemble custom forearm prosthetics, meticulously tailored to meet the exact size specifications of each patient. These prosthetics utilize mechanical actuation for joint movement and object gripping, providing an affordable and accessible solution for patients with limited financial resources, ensuring that everyone has access to life-enhancing technology.
+                        This term (S25), we are utilizing <a href="https://www.makersmakingchange.com/s/">Makers Making Change</a> to connect our members with people in need of mobility aids that we can design and manufacture for them. Our mission is to provide an affordable and accessible solution for patients with limited financial resources, ensuring that everyone has access to life-enhancing technology. In the past, we made functional 3D-printed prosthetics which you can check out <a href="past projects.html">here</a>!
                       </p>
                     </div>
                     <div class="col-4">
