--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               -->
 								<li><a href="about.html">About Us</a></li>
 								<li><a href="projects.html">Projects</a></li>
+								<li><a href="past projects.html">Past Projects</a></li>
 								<li><a href="join.html">Join Us</a></li>
 							</ul>
 						</nav>
@@ -126,32 +127,11 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="projects.html" class="image featured"><img src="images/tetra.png" alt="" /></a>
-													<header>
-														<h3>Tetra</h3>
-													</header>
-													<p>Designing tailored medical devices that meet the unique needs of individual patients.</p>
-												</section>
-											</div>
-                    </div>
-                  </br>
-                    <div class="row">
-                      <div class="col-4 col-6-medium col-12-small off-2">
-												<section class="box">
-													<a href="projects.html" class="image featured"><img src="images/spine.jpg" alt="" /></a>
-													<header>
-														<h3>Spine Biostickers</h3>
-													</header>
-													<p>Ensuring safe recovery through real-time spinal posture monitoring technology.</p>
-												</section>
-											</div>
-											<div class="col-4 col-6-medium col-12-small">
-												<section class="box">
 													<a href="projects.html" class="image featured"><img src="images/handtopview.jpeg" alt="" /></a>
 													<header>
 														<h3>e-NABLE</h3>
 													</header>
-													<p>Transforming lives with affordable, custom 3D-printed prosthetics for those in need.</p>
+													<p>Transforming lives with affordable, custom 3D-printed mobility aids for those in need.</p>
 												</section>
 											</div>
                     </div>
